sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value sorting
  sorting = true
  ^AlgBubbleSort1:4: error: not found: value sorting
  while (sorting == true) {
         ^AlgBubbleSort1:5: error: not found: value sorting
    sorting = true;
    ^AlgBubbleSort1:11: error: not found: value sorting
        sorting = false
        ^